--- a/src/stats.scss
+++ b/src/stats.scss
@@ -1,6 +1,30 @@
-body {
+html, body {
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
+
+h1, h2, h3 {
+  padding: 0;
+}
+
+h1 {
+  margin: 20px 0 0;
+}
+
+h2 {
+  margin: 15px 0 0;
+}
+
+h3 {
+  margin: 30px 0 0;
+}
+
+#canvas_holder {
+  width: 320px;
+  margin: 0 auto;
+}
+
 #plot {
   height: 48px;
   width: 144px;
@@ -17,4 +41,45 @@ body {
 .footer {
   text-align: right;
   margin: 40px 20px 0;
+}
+
+#sizer {
+  margin: 10px auto 0;
+  padding: 0;
+  width: 130px;
+
+  #input_holder {
+    overflow: hidden;
+    width: 130px;
+    height: 40px;
+    line-height: 20px;
+    margin: 0;
+    font-size: 14px;
+
+    .begin {
+        float: left;
+    }
+
+    .end {
+        float: right;
+    }
+  }
+
+  input {
+      display: block;
+      margin: 0;
+      padding: 0;
+      cursor: pointer;
+      width: 130px;
+  }
+
+  #output_holder {
+    width: 130px;
+
+    output {
+      margin: 0;
+      padding: 0;
+      font-size: 18px;
+    }
+  }
 }
